[tool.poetry]
name = "repl_python3_PR1"
version = "0.1.0"
description = ""
authors = ["Nicolas-93 <nicolas__du95@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
